# openBBlib

./: .gitignore  README.md  __init__.py
core/: ObjAnnotation.py  ObjLocator.py  __init__.py
core/utils/: groups_utils.py  vectors_utils.py
coursesFiles/cvJiggleDeformer/: cvJiggleCmd.cpp  cvJiggleCmd.h  cvJiggleDeformer.cpp  cvJiggleDeformer.h  pluginMain.cpp
customPlugins/: Makefile  collisionDeformer.cpp  collisionDeformer.hpp  curveSampler.cpp  curveSampler.hpp  edgeRealx.hpp  edgeRelax.cpp  matrixSelector.cpp  matrixSelector.hpp  meshRelax.cpp  meshRelax.hpp  normalPush.cpp  normalPush.hpp  oou_math.hpp  plugin.cpp  sticky_sculpt.cpp  sticky_sculpt.hpp  vertSnap.cpp  vertSnap.hpp
customPlugins/01_python_plugin/: jiggle_point_node.py
customPlugins/03_tests/00_testCmake/samplePluginCMAKE/src/: CMakeLists.txt  pluginMain.cpp
modulesCreator/: ModuleCreator.py  __init__.py
modulesLib/: ModuleCreator.py  ModuleSkeleton.py  TwistJointsCreator.py  __init__.py  twistChainCompleteModule.py
pythonUIs/: ImportExportAnimUI.py
pythonUtils/: ImportExportAnimUI.py  JsonUtils.py  __init__.py  createCurveBetweenTwoPoints.py  jointsOnCurve_motionPathBased.py  maya_node_template.py  saveDataOnJson.py  testMayaPortSphere.py  uiSettings.py
rigging_tools/: common_utils.py  curve.py  delaunay.py  digit.py  digits  digits.py  fk_module.py  hand.py  lib_transform.py  math.py  mesh.py  mesh_lib.py  name.py  progress_bar.py  rig_loc.py  ziva_utils.py
test/: CMakeLists.txt  firstC.cpp  locatorCreate_old_pyMel.py
testFiles/: moduleLeg.json
testPython/: stringParsing.py
(+145 files in other folders)
